--- a/angular.json
+++ b/angular.json
@@ -67,7 +67,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "todo-app:build"
+            "browserTarget": "todo-app:build",
+            "publicHost":"todo.codifiedgeek.com"
           },
           "configurations": {
             "production": {
