--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "@angular/router": "~8.2.0",
     "bootstrap": "^4.3.1",
     "firebase": "^7.2.1",
+    "prettier": "^1.18.2",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
+    "tslint-config-prettier": "^1.18.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
